--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -41,8 +41,8 @@
 								</div>
 
 								<div class="form-group">
-									<label for="number">Phone Number</label>
-									<input id="number" type="number" class="form-control" name="number" required data-eye>
+									<label for="contact">Phone Number</label>
+									<input id="contact" type="number" class="form-control" name="contact" required data-eye>
 									
 								</div>
 
