--- a/views/home.ejs
+++ b/views/home.ejs
@@ -145,10 +145,10 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
 
 </div>
 <br/>
-<div class="col-lg-3 col-md-4 col-sm-12"> 
+<!-- <div class="col-lg-3 col-md-4 col-sm-12"> 
   <h5>Location of Powayan</h5>
 
-</div>
+</div> -->
 </div>
 </div>
 
@@ -201,10 +201,13 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
   <br>
    
   <p>
-  <a href="https://en-gb.facebook.com/login/"><i class="social-icon fab fa-facebook-f ic"></i></a>
-  <a href="https://www.instagram.com/?hl=en"><i class="social-icon fab fa-instagram ic"></i></a>
+    &nbsp;
+  <a href="https://m.facebook.com/Chandi-appliances-and-services-106784528150623/"><i class="social-icon fab fa-facebook-f fa-2x ic"></i></a>
+  &nbsp;<a href="https://www.instagram.com/?hl=en"><i class="social-icon fab fa-instagram fa-2x ic"></i></a>
+  &nbsp;<a href="https://g.page/chandi-appliances-and-services?share"><i class="social-icon fas fa-map-marker-alt fa-2x ic"></i></a>
 
   </p>
+
   <div style="align-items : right;">
   </div>
   </div>
