--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,8 +22,17 @@
     service for your appliance. Don't panic in these kind of situations, We are just a call away.
     </p>
     <p>
-    You can <a href="">Contact Us from here</a> .
+    You can <a href="">Contact Us from here</a>.
   </p>
+ 
+  </div></div>
+
+  <div class="row main">
+    <div class="col-lg-6 col-md-6 col-sm-12 imgbtm">
+<img class="securityimg1" src="/images/purifier.jpeg" />      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 divbtm">
+
   <p>
 Pro Tip: If you don’t check your appliance regularly, they may cause many big problems and also may 
 lead to replacing the machine. Getting a new appliance may expense high, hence it’s better to 
@@ -102,7 +111,7 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
              <tr>
                <td>
                  <p>
-                  In our store, wherever new opportunities arise- we work relentlessly 
+                  In our store, wherever new opportunities arise, we work relentlessly 
                   to give customers the most compelling shopping experience possible. We offer the customer the 
                   best possible service, selection, quality and value.
                 </p>         </td>
@@ -139,9 +148,9 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
 <div class="col-lg-3 col-md-4 col-sm-12">
 <h5>Location of Gangsara</h5>
   <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=417&amp;height=317&amp;hl=en&amp;q=chandi appliances, gangsara, uttar pradesh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.fridaynightfunkin.net/">Friday Night Funkin</a></div>
-  <style>.mapouter{position:relative;text-align:right;width:410px;height:310px;}
-  .gmap_canvas {overflow:hidden;background:none!important;width:410px;height:310px;}
-  .gmap_iframe {width:410px!important;height:310px!important;}</style></div>
+  <style>.mapouter{position:relative;text-align:right;width:350px;height:270px;}
+  .gmap_canvas {overflow:hidden;background:none!important;width:350px;height:270px;}
+  .gmap_iframe {width:350px!important;height:270px!important;}</style></div>
 
 </div>
 <br/>
@@ -159,8 +168,8 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
     <div class="col-lg-3 col-md-4 col-sm-12">
       <div class="shadow-lg p-3 mb-5 bg-white rounded card">
         <p><i class="fa fa-user"></i></p>
-        <h3>11+</h3>
-        <p class="namebtm">Partners</p>
+        <h3>30+</h3>
+        <p class="namebtm">Companies</p>
       </div>
     </div>
 
@@ -196,14 +205,14 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
    <p><img src="https://img.icons8.com/material-outlined/20/000000/outgoing-call.png"> +91-9721587318, +91-7080968165
     &nbsp&nbsp</p>
     <p>
-    <img src="https://img.icons8.com/material-sharp/20/000000/mailing.png"> sukhpal2958singh@gmail.com
+    <img src="https://img.icons8.com/material-sharp/20/000000/mailing.png"> chandiappliancesandservices@gmail.com
   </p> 
   <br>
    
   <p>
     &nbsp;
   <a href="https://m.facebook.com/Chandi-appliances-and-services-106784528150623/"><i class="social-icon fab fa-facebook-f fa-2x ic"></i></a>
-  &nbsp;<a href="https://www.instagram.com/?hl=en"><i class="social-icon fab fa-instagram fa-2x ic"></i></a>
+  &nbsp;<a href="https://instagram.com/sukh_chandi2958?utm_medium=copy_link"><i class="social-icon fab fa-instagram fa-2x ic"></i></a>
   &nbsp;<a href="https://g.page/chandi-appliances-and-services?share"><i class="social-icon fas fa-map-marker-alt fa-2x ic"></i></a>
 
   </p>
