--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,14 +24,14 @@
   Contact Details:- 
 <img src="https://img.icons8.com/material-outlined/20/000000/outgoing-call.png"> +91-9721587318, +91-7080968165
 &nbsp&nbsp
-<img src="https://img.icons8.com/material-sharp/20/000000/mailing.png"> sukhpal2958singh@gmail.com
+<img src="https://img.icons8.com/material-sharp/20/000000/mailing.png"> chandiappliancesandservices@gmail.com
 </div>
 
 <h1 class="text-hide" style="background-image: url('/images/cyberforen3.jpg');">Bootstrap</h1>
 
 
 <nav class="navbar navbar-expand-lg navbar-light" id="heading" style="background-color: #ccedd2;">
-<p class="navbrand">CHANDI APPLIANCES AND SERVICES
+  <p class="navbrand">CHANDI APPLIANCES AND SERVICES
 </p>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#drop">
     <span class="navbar-toggler-icon"></span>
@@ -54,18 +54,19 @@
                   <div class="row">
                                     <div class="col-lg-4">
                                     <ul class="list-group list-group-flush listingmenu">
-    <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Water Purifiers</li>
-    <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Air Conditioners</li>
-    <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>CCTVs</li>
-    <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Air Heaters</li>
+    <li class="list-group-item listingmenu">Water Purifiers</li>
+    <li class="list-group-item listingmenu">Air Conditioners</li>
+    <li class="list-group-item listingmenu">CCTVs</li>
+    <li class="list-group-item listingmenu">Geyser</li>
+    <li class="list-group-item listingmenu">Refrigerator</li>
+    <li class="list-group-item listingmenu">Washing Machine</li>
+    <li class="list-group-item listingmenu">Air Heaters</li>
+    <li class="list-group-item listingmenu">Second-Hand Items</li>
+
     </ul>
 </div>
 </div>
     </li>
-
-
-
-
       <li class="nav-item">
         <a class="nav-link"  style="color: #0c093c;">SERVICES</a>
 
@@ -74,9 +75,10 @@
                     <div class="row">
                                       <div class="col-lg-4">
                                       <ul class="list-group list-group-flush listingmenu">
-      <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Repairing</li>
-      <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Home Delivery</li>
-      <li class="list-group-item listingmenu"><i class="fa fa-angle-right bullet"></i>Servicing</li>
+      <li class="list-group-item listingmenu">Repairing</li>
+      <li class="list-group-item listingmenu">Servicing</li>
+      <li class="list-group-item listingmenu">Home Delivery</li>
+      <li class="list-group-item listingmenu">Rentals</li>
       </ul>
      </div>
       </div>
@@ -86,6 +88,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/feedback" style="color: #0c093c;">FEEDBACK</a>
       </li>
+
 
     </ul>
 
