location of powayan added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -146,18 +146,23 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
 
 <div class="btm-card">
 <div class="col-lg-3 col-md-4 col-sm-12">
-<h5>Location of Gangsara</h5>
-  <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=417&amp;height=317&amp;hl=en&amp;q=chandi appliances, gangsara, uttar pradesh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.fridaynightfunkin.net/">Friday Night Funkin</a></div>
-  <style>.mapouter{position:relative;text-align:right;width:350px;height:270px;}
-  .gmap_canvas {overflow:hidden;background:none!important;width:350px;height:270px;}
-  .gmap_iframe {width:350px!important;height:270px!important;}</style></div>
 
-</div>
+<h5>Location of Powayan</h5>
+
+<div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" 
+  marginwidth="0" 
+  src="https://maps.google.com/maps?q=28.070560899667715,%2080.09921058204178&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+  frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br>
+  <style>.mapouter{position:relative;text-align:right;height:270px;width:350px;}</style>
+  <style>.gmap_canvas {overflow:hidden;background:none!important;height:270px;width:350px;}
+   .gmap_iframe {width:350px!important;height:270px!important;}</style>
+</div></div>
 <br/>
-<!-- <div class="col-lg-3 col-md-4 col-sm-12"> 
-  <h5>Location of Powayan</h5>
-
-</div> -->
+<h5>Location of Gangsara</h5>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="350" height="270" id="gmap_canvas" src="https://maps.google.com/maps?q=28.124979146377978,%2080.1696958042709&t=&z=13&ie=UTF8&iwloc=&output=embed"
+ frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br>
+ <style>.mapouter{position:relative;text-align:right;height:270px;width:350px;}</style><style>
+.gmap_canvas {overflow:hidden;background:none!important;height:270px;width:350px;}</style></div></div>
 </div>
 </div>
 
@@ -213,7 +218,7 @@ be serviced once in a month or 6 months once. If you are not repairing the appli
     &nbsp;
   <a href="https://m.facebook.com/Chandi-appliances-and-services-106784528150623/"><i class="social-icon fab fa-facebook-f fa-2x ic"></i></a>
   &nbsp;<a href="https://instagram.com/sukh_chandi2958?utm_medium=copy_link"><i class="social-icon fab fa-instagram fa-2x ic"></i></a>
-  &nbsp;<a href="https://g.page/chandi-appliances-and-services?share"><i class="social-icon fas fa-map-marker-alt fa-2x ic"></i></a>
+  &nbsp;<a href="https://goo.gl/maps/eSj4PtZzCaHZ3tAu5"><i class="social-icon fas fa-map-marker-alt fa-2x ic"></i></a>
 
   </p>
 
