--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,7 +295,7 @@ nav li:hover .menu-sub {
 
 .securityimg1{
   height:300px;
-  width:700px;
+  width:100%;
   margin-top: 5px;
   opacity: 0.7;
   filter: alpha(opacity=50); /* For IE8 and earlier */
